# chatbot_bi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
agent_api/: .env.example  __init__.py  main.py  requirements.txt
agent_api/core/: chart_builder.py  chart_selector.py  dashboard_service.py  dashboard_store.py  data_sources.py  data_summary.py  debug_log.py  graph.py  security.py  state.py
agent_api/core/agents/: __init__.py  data_profiler.py  (+6 more)
agent_api/data/: fuentes_datos.csv
agent_api/metadata/: cube_dictionary.py
agent_api/tools/: filter_lookup.py  ssas_client.py  ssas_executor.py
frontend_ui/: .env.example  .gitignore  docker-entrypoint.sh  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend_ui/components/: AgentChart.client.vue  AgentDebugPanel.vue  AppNavbar.vue  ChartWithFilters.client.vue  ChatInterface.vue  DashboardToggleButton.vue  DataSourcesPanel.vue  MarkdownContent.client.vue  PowerBiEmbed.client.vue
frontend_ui/composables/: useDashboard.ts  useDataSources.ts
frontend_ui/layouts/: default.vue
frontend_ui/pages/: index.vue
frontend_ui/plugins/: echarts.client.ts
frontend_ui/utils/: brandTheme.ts  chartConfig.ts  chartFilters.ts  formatAgentText.ts  maskSensitive.ts  normalizeChartConfig.ts  powerBiConfig.ts  renderMarkdown.ts
scripts/: .env.cube.example  docker-up.ps1  run_backend.bat  run_backend.ps1  run_frontend.bat  test_chart_clr_types.py  test_chart_selector.py  test_cube_connection.py  test_dax_sanitize.py  test_viz_narrative.py  visualizar_langgraph.bat  visualizar_langgraph.py
(+19 files in other folders)
